# ThumbyOne

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  firmware_thumbyone_revert.uf2
common/: CMakeLists.txt  pt.json  pt_with_md.json  slot_layout.h  thumbyone_handoff.c  thumbyone_handoff.h
common/fs/: thumbyone_disk.c  thumbyone_disk.h  thumbyone_diskio.c  thumbyone_fs.c  thumbyone_fs.h
common/lib/: fatfs  thumbyone_backlight.c  thumbyone_backlight.h  thumbyone_battery.c  thumbyone_battery.h  thumbyone_fs_stats.c  thumbyone_fs_stats.h  thumbyone_led.c  thumbyone_led.h  thumbyone_rtc.c  thumbyone_rtc.h  thumbyone_settings.c  thumbyone_settings.h
common/linker/: slot_memmap.ld.in
common/picker/: lcd_gc9107.c  lcd_gc9107.h  menu_watchdog.c  menu_watchdog.h  picker.c  picker.h  picker_bmp.c  picker_bmp.h
lobby/: font.h  lobby_icons.c  lobby_icons.h  lobby_main.c  lobby_usb.c  lobby_usb.h  tusb_config.h
spike/: CMakeLists.txt  README.md  blinky_slot.c  font.c  lcd_gc9107.c  pt.json
tools/: combine_uf2.py  pack_icons.py  pack_system_rom.py  uf2_repack_absolute.py
